Refact/Fix : changed media presets
Refact : changed media presets
Fix : image overflowing wysiwyg editor

--- a/src/app/(payload)/_editor.scss
+++ b/src/app/(payload)/_editor.scss
@@ -114,3 +114,9 @@
   height: 1px;
 }
 
+.LexicalEditorTheme__upload__media {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
